<resources>
    <string name="app_name">playspot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_adminHome">Home</string>
    <string name="title_adminFeedback">Feedback</string>
    <string name="title_adminProfile">Profile</string>
    <string name="title_activity_stadium">Stadium</string>
    <string name="title_stadium_booking">Booking</string>
    <string name="title_stadium_accounts">Accounts</string>
    <string name="title_stadium_facilities">Facilities</string>
    <string name="title_stadium_profile">Profile</string>
</resources>