<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stadium_booking"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/title_stadium_booking" />

    <item
        android:id="@+id/navigation_stadium_accounts"
        android:icon="@drawable/ic_baseline_account__24"
        android:title="@string/title_stadium_accounts" />

    <item
        android:id="@+id/navigation_stadium_facilities"
        android:icon="@drawable/ic_baseline_facilities_24"
        android:title="@string/title_stadium_facilities" />

    <item
        android:id="@+id/navigation_stadium_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_stadium_profile" />

</menu>