<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_admin_home">

    <fragment
        android:id="@+id/navigation_admin_home"
        android:name="com.example.playspot.admin.admin_home.AdminHomeFragment"
        android:label="@string/title_adminHome"
        tools:layout="@layout/fragment_adminhome" />

    <fragment
        android:id="@+id/navigation_admin_feedback"
        android:name="com.example.playspot.admin.admin_feedback.AdminFeedbackFragment"
        android:label="@string/title_adminFeedback"
        tools:layout="@layout/fragment_adminfeedback" />

    <fragment
        android:id="@+id/navigation_admin_profile"
        android:name="com.example.playspot.admin.admin_profile.AdminProfileFragment"
        android:label="@string/title_adminProfile"
        tools:layout="@layout/fragment_adminprofile" />
</navigation>